--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
@@ -33,7 +34,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //noinspection GradleDependency
     implementation 'com.jakewharton:butterknife:9.0.0'
+    //noinspection GradleDependency
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0'
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
